--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
     padding: 5px;
     border: 1px solid black;
     text-align: center;
-    font-size: 40px;    
+    font-size: 40px;    ;
 }
 
 ul {
